# AI-based-shareanalysis

./: .dockerignore  .env.example  .gitignore  Create Friend Package.bat  README.md  Start AI Portfolio Advisor.bat  Stop AI Portfolio Advisor.bat  docker-compose.yml  package-lock.json  package.json
apps/agent/: pyproject.toml
apps/agent/src/advisor_agents/: graph.py  state.py
apps/api/: Dockerfile  pyproject.toml
apps/api/src/: main.py
apps/api/src/api/: dependencies.py  routes.py
apps/api/src/core/: config.py  security.py
apps/api/src/db/: bootstrap.py  session.py
apps/api/src/domain/: auth.py
apps/api/src/integrations/: kite_mcp.py
apps/api/src/repositories/: app_settings.py  audit.py  broker_connections.py  portfolio.py  recommendation_history.py  users.py
apps/api/src/schemas/: ai_config.py  analytics.py  auth.py  discovery.py  intelligence.py  portfolio.py  zerodha.py
apps/api/src/services/: alerting_service.py  broker_service.py  company_analytics_service.py  csv_portfolio_parser.py  daily_refresh_service.py  fundamental_analysis_service.py  intelligence_providers.py  intelligence_service.py  market_analysis_service.py  news_analysis_service.py  openai_analytics_service.py  openai_settings_service.py  portfolio_analysis_service.py  portfolio_service.py  (+3 more)
apps/api/tests/: test_alerting_service.py  test_broker_service.py  test_company_analytics_service.py  test_csv_portfolio_parser.py  test_intelligence_service.py  test_market_data_provider.py  test_portfolio_service.py  test_recommendation_engine.py  test_technical_analysis_service.py
(+30 files in other folders)
