[project]
name = "ai-portfolio-advisor-agent"
version = "0.1.0"
description = "LangGraph advisory agents for AI Portfolio Advisor"
requires-python = ">=3.12"
dependencies = [
  "langchain>=0.2.14",
  "langgraph>=0.2.14",
  "openai>=1.42.0",
  "pydantic>=2.8.2"
]

[project.optional-dependencies]
dev = ["pytest>=8.3.2", "ruff>=0.6.3"]
