[project]
name = "ai-portfolio-advisor-api"
version = "0.1.0"
description = "FastAPI backend for AI Portfolio Advisor"
requires-python = ">=3.12"
dependencies = [
  "asyncpg>=0.29.0",
  "cryptography>=43.0.0",
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "mcp>=1.27,<2",
  "pydantic-settings>=2.4.0",
  "python-multipart>=0.0.20",
  "python-json-logger>=2.0.7",
  "redis>=5.0.8",
  "sqlalchemy[asyncio]>=2.0.32",
  "uvicorn[standard]>=0.30.6"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.2",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.6.3"
]

[build-system]
requires = ["setuptools>=72.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
